WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97607
[BLACKBERRY] Fat Fingers doesn't work on non-scrollable pages.
https://bugs.webkit.org/show_bug.cgi?id=97607
Summary
[BLACKBERRY] Fat Fingers doesn't work on non-scrollable pages.
gmak
Reported
2012-09-25 14:41:06 PDT
Fat Fingers doesn't work on non-scrollable pages.
Attachments
patch with commit log
(2.69 KB, patch)
2012-09-25 14:47 PDT
,
gmak
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
gmak
Comment 1
2012-09-25 14:47:05 PDT
Created
attachment 165679
[details]
patch with commit log
Antonio Gomes
Comment 2
2012-09-25 19:50:53 PDT
Comment on
attachment 165679
[details]
patch with commit log View in context:
https://bugs.webkit.org/attachment.cgi?id=165679&action=review
> Source/WebKit/blackberry/WebKitSupport/TouchEventHandler.cpp:262 > + // always use the true touch point if using the meta-tag, otherwise only use it if we sent mouse moves
Should be capital "A". its -> it's
WebKit Review Bot
Comment 3
2012-09-25 19:54:48 PDT
Comment on
attachment 165679
[details]
patch with commit log Clearing flags on attachment: 165679 Committed
r129587
: <
http://trac.webkit.org/changeset/129587
>
WebKit Review Bot
Comment 4
2012-09-25 19:54:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug