Fat Fingers doesn't work on non-scrollable pages. PR #209609 https://bugs.webkit.org/show_bug.cgi?id=97607

Patch by Genevieve Mak <gmak@rim.com> on 2012-09-25
Reviewed by Antonio Gomes.

Only bypass Fat Fingers and use the actual touch point if its specifically
requested and the page has a mouse move listener or if using the Touch Event
Mode meta-tag.

* WebKitSupport/TouchEventHandler.cpp:
(BlackBerry::WebKit::TouchEventHandler::handleTouchPoint):

Canonical link: https://commits.webkit.org/115603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129587 268f45cc-cd09-0410-ab3c-d52691b4dbfc