Source/WebKit/blackberry/WebKitSupport/TouchEventHandler.cpp
@@ -257,7 +257,9 @@ bool TouchEventHandler::handleTouchPoint(Platform::TouchPoint& point, bool useFa
                 m_webPage->m_inputHandler->notifyClientOfKeyboardVisibilityChange(true);
 
             IntPoint adjustedPoint;
-            if (m_convertTouchToMouse || !useFatFingers) {
+            // always use the true touch point if using the meta-tag, otherwise only use it if we sent mouse moves
+            // to the page and its requested.
+            if (pureWithMouseConversion || (m_convertTouchToMouse && !useFatFingers)) {
                 adjustedPoint = point.m_pos;
                 m_convertTouchToMouse = pureWithMouseConversion;
             } else // Fat finger point in viewport coordinates.
